# Caustica

./: .gitignore  RT_RENDERER_PLAN.md  build.gradle  runClient.ps1  settings.gradle
.github/workflows/: ci.yml
.zcode/plans/: plan-sess_3df37864-ee37-4f14-89a5-51a4d8d5b124.md
docs/: bloom.md  pipeline.md
native/ngx_shim/: CMakeLists.txt  ngx_shim.cpp
shaders/display/: bloom_blur.comp  bloom_downsample.comp  bloom_threshold.comp  bloom_upsample.comp  display.comp
shaders/rt/: blend.comp  world.rahit  world.rchit  world.rgen
shaders/world/: world.rahit.slang  world.rchit.slang  world.rgen.slang  world.rmiss  world.rmiss.slang  world_common.slang
src/main/java/dev/comfyfluffy/caustica/: CausticaConfig.java  CausticaMod.java
src/main/java/dev/upscaler/: UpscalerConfig.java  UpscalerMod.java
src/main/java/dev/upscaler/client/: DlssPipeline.java  DlssSmokeTest.java  FsrPipeline.java  RtVideoOptions.java  SodiumCompat.java  UpscalerClient.java  UpscalerJitter.java  WorldRenderScaler.java
src/main/java/dev/upscaler/mixin/: BlockModelRenderStateMixin.java  BlockModelResolverMixin.java  GameRendererMixin.java  RenderSetupAccessor.java  SpriteContentsAccessor.java  VulkanBackendMixin.java  VulkanInstanceMixin.java
src/main/java/dev/upscaler/ngx/: NgxLibrary.java
src/main/java/dev/upscaler/rt/: ContainedBlockSource.java  RtAccel.java  RtBlockMaterials.java  RtComposite.java  RtContext.java  RtDebugLabels.java  RtDeviceBringup.java  RtDlssRr.java  (+7 more)
src/main/resources/: caustica.mixins.json  upscaler.mixins.json
src/main/resources/upscaler/rt/: world.rchit.spv
(+52 files in other folders)
